evidence/runs/20260228-200856/raw/azure/nsg-list.json
[
  {
    "defaultSecurityRules": [
      {
        "access": "Allow",
        "description": "Allow inbound traffic from all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"247e0f38-6c62-4aa9-9c0d-04cbebe04096\"",
        "id": "/subscriptions/3601ba7f-cdac-4f0a-92ab-05e92a4ca810/resourceGroups/rg-cui-pilot-envclave/providers/Microsoft.Network/networkSecurityGroups/nsg-cui-pilot/defaultSecurityRules/AllowVnetInBound",
        "name": "AllowVnetInBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-cui-pilot-envclave",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow inbound traffic from azure load balancer",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"247e0f38-6c62-4aa9-9c0d-04cbebe04096\"",
        "id": "/subscriptions/3601ba7f-cdac-4f0a-92ab-05e92a4ca810/resourceGroups/rg-cui-pilot-envclave/providers/Microsoft.Network/networkSecurityGroups/nsg-cui-pilot/defaultSecurityRules/AllowAzureLoadBalancerInBound",
        "name": "AllowAzureLoadBalancerInBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-cui-pilot-envclave",
        "sourceAddressPrefix": "AzureLoadBalancer",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all inbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"247e0f38-6c62-4aa9-9c0d-04cbebe04096\"",
        "id": "/subscriptions/3601ba7f-cdac-4f0a-92ab-05e92a4ca810/resourceGroups/rg-cui-pilot-envclave/providers/Microsoft.Network/networkSecurityGroups/nsg-cui-pilot/defaultSecurityRules/DenyAllInBound",
        "name": "DenyAllInBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-cui-pilot-envclave",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to all VMs in VNET",
        "destinationAddressPrefix": "VirtualNetwork",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"247e0f38-6c62-4aa9-9c0d-04cbebe04096\"",
        "id": "/subscriptions/3601ba7f-cdac-4f0a-92ab-05e92a4ca810/resourceGroups/rg-cui-pilot-envclave/providers/Microsoft.Network/networkSecurityGroups/nsg-cui-pilot/defaultSecurityRules/AllowVnetOutBound",
        "name": "AllowVnetOutBound",
        "priority": 65000,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-cui-pilot-envclave",
        "sourceAddressPrefix": "VirtualNetwork",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Allow",
        "description": "Allow outbound traffic from all VMs to Internet",
        "destinationAddressPrefix": "Internet",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"247e0f38-6c62-4aa9-9c0d-04cbebe04096\"",
        "id": "/subscriptions/3601ba7f-cdac-4f0a-92ab-05e92a4ca810/resourceGroups/rg-cui-pilot-envclave/providers/Microsoft.Network/networkSecurityGroups/nsg-cui-pilot/defaultSecurityRules/AllowInternetOutBound",
        "name": "AllowInternetOutBound",
        "priority": 65001,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-cui-pilot-envclave",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      },
      {
        "access": "Deny",
        "description": "Deny all outbound traffic",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "*",
        "destinationPortRanges": [],
        "direction": "Outbound",
        "etag": "W/\"247e0f38-6c62-4aa9-9c0d-04cbebe04096\"",
        "id": "/subscriptions/3601ba7f-cdac-4f0a-92ab-05e92a4ca810/resourceGroups/rg-cui-pilot-envclave/providers/Microsoft.Network/networkSecurityGroups/nsg-cui-pilot/defaultSecurityRules/DenyAllOutBound",
        "name": "DenyAllOutBound",
        "priority": 65500,
        "protocol": "*",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-cui-pilot-envclave",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/defaultSecurityRules"
      }
    ],
    "etag": "W/\"247e0f38-6c62-4aa9-9c0d-04cbebe04096\"",
    "id": "/subscriptions/3601ba7f-cdac-4f0a-92ab-05e92a4ca810/resourceGroups/rg-cui-pilot-envclave/providers/Microsoft.Network/networkSecurityGroups/nsg-cui-pilot",
    "location": "westus2",
    "name": "nsg-cui-pilot",
    "networkInterfaces": [
      {
        "id": "/subscriptions/3601ba7f-cdac-4f0a-92ab-05e92a4ca810/resourceGroups/RG-CUI-PILOT-ENVCLAVE/providers/Microsoft.Network/networkInterfaces/CUI-WIN-PILOT-01564_Z1",
        "resourceGroup": "RG-CUI-PILOT-ENVCLAVE"
      }
    ],
    "provisioningState": "Succeeded",
    "resourceGroup": "rg-cui-pilot-envclave",
    "resourceGuid": "3b154bc9-1cbf-4031-9887-18c42d51c9dc",
    "securityRules": [
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "3389",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"247e0f38-6c62-4aa9-9c0d-04cbebe04096\"",
        "id": "/subscriptions/3601ba7f-cdac-4f0a-92ab-05e92a4ca810/resourceGroups/rg-cui-pilot-envclave/providers/Microsoft.Network/networkSecurityGroups/nsg-cui-pilot/securityRules/default-allow-rdp",
        "name": "default-allow-rdp",
        "priority": 1000,
        "protocol": "TCP",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-cui-pilot-envclave",
        "sourceAddressPrefix": "*",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "22",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"247e0f38-6c62-4aa9-9c0d-04cbebe04096\"",
        "id": "/subscriptions/3601ba7f-cdac-4f0a-92ab-05e92a4ca810/resourceGroups/rg-cui-pilot-envclave/providers/Microsoft.Network/networkSecurityGroups/nsg-cui-pilot/securityRules/allow-ssh-pilot",
        "name": "allow-ssh-pilot",
        "priority": 900,
        "protocol": "TCP",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-cui-pilot-envclave",
        "sourceAddressPrefix": "104.174.231.1",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Deny",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "3389",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"247e0f38-6c62-4aa9-9c0d-04cbebe04096\"",
        "id": "/subscriptions/3601ba7f-cdac-4f0a-92ab-05e92a4ca810/resourceGroups/rg-cui-pilot-envclave/providers/Microsoft.Network/networkSecurityGroups/nsg-cui-pilot/securityRules/Deny-RDP-From-Public-Codex",
        "name": "Deny-RDP-From-Public-Codex",
        "priority": 200,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-cui-pilot-envclave",
        "sourceAddressPrefix": "0.0.0.0/0",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      },
      {
        "access": "Allow",
        "destinationAddressPrefix": "*",
        "destinationAddressPrefixes": [],
        "destinationPortRange": "3389",
        "destinationPortRanges": [],
        "direction": "Inbound",
        "etag": "W/\"247e0f38-6c62-4aa9-9c0d-04cbebe04096\"",
        "id": "/subscriptions/3601ba7f-cdac-4f0a-92ab-05e92a4ca810/resourceGroups/rg-cui-pilot-envclave/providers/Microsoft.Network/networkSecurityGroups/nsg-cui-pilot/securityRules/Allow-RDP-From-MyIP",
        "name": "Allow-RDP-From-MyIP",
        "priority": 100,
        "protocol": "Tcp",
        "provisioningState": "Succeeded",
        "resourceGroup": "rg-cui-pilot-envclave",
        "sourceAddressPrefix": "104.174.231.1/32",
        "sourceAddressPrefixes": [],
        "sourcePortRange": "*",
        "sourcePortRanges": [],
        "type": "Microsoft.Network/networkSecurityGroups/securityRules"
      }
    ],
    "type": "Microsoft.Network/networkSecurityGroups"
  }
]
